# analytics-dashboard-assessment

./: LICENSE  README.md
client/: README.md  bun.lockb  package.json
client/src/: middleware.ts
client/src/app/: globals.css  layout.tsx
client/src/app/(dashboard)/: layout.tsx  page.tsx
client/src/app/(dashboard)/_components/: CommonSidebar.tsx  Header.tsx  LeftSidebarContent.tsx  RightSidebarContent.tsx  StatsCard.tsx  TotalUsersChart.tsx  TrafficChart.tsx
client/src/app/auth/: layout.tsx
client/src/app/auth/_components/: AuthPageTitle.tsx  GoogleLoginButton.tsx
client/src/app/auth/login/: page.tsx
client/src/app/auth/signup/: page.tsx
client/src/hooks/: use-auth.ts  use-dashboard-data.ts
client/src/lib/: actions.ts  api.ts  axios-instance.ts  constants.ts  dal.ts
client/src/providers/: query-provider.tsx
client/src/schemas/: auth.ts
server/: .dockerignore  .env.example  DOCKER.md  Dockerfile  Dockerfile.prod  MIGRATIONS.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
server/app/: __init__.py  config.py
server/app/middleware/: error_handlers.py
server/app/models/: __init__.py  dashboard_summary.py  metric.py  user.py
server/app/routes/: __init__.py  api_docs.py  auth.py  dashboard.py  health_check.py
server/app/scripts/: __init__.py  seed_db.py
server/app/utils/: __init__.py  auth_utils.py  response.py  validation.py
server/migrations/: env.py
server/migrations/versions/: ae8bf8e6b2ce_init.py
